examples/typechecking/handle_affine.an
type Resource = id: I32

consume _ = ()

ability Emit a =
    emit: fn a -> Unit

// Moving a non-copy outer variable in a handler branch should error
move_outer_in_branch (r: Resource) (x: I32) =
    handler h for emit () ->
        consume x
        consume r
        resume ()
    in emit () {h}

// Moving branch-local variables is fine
move_handler_param () =
    handler h for emit x ->
        consume x
        local = Resource 2
        consume local
        resume ()
    in emit (Resource 1) {h}

// The handled expression runs once so moves there are fine
move_in_expression () =
    r = Resource 3
    handler h for emit () -> resume ()
    consume r

main () = ()

// args: --check --no-color
// expected exit status: 1
// expected stderr:
// examples/typechecking/handle_affine.an:12:17
// 11 |         consume x
//    |         // error: Cannot move r in a handler branch because it may be executed multiple times
// 12 |         consume r
//    |                 ^
// 13 |         resume ()
// 
// Found 1 error and 0 warnings

